# InvestorChatbot

./: .gitignore  InvestBotHighLevelSystemDesign.drawio  Makefile  README.md  balance_sheet.go  balance_sheet.py  financial_ratios.py  go.mod  go.sum  income_statement.py  industries.go  industry_stocks.go  main.go  pyproject.toml  sector_stocks.go  sectors.go  stock_forecasts.py  stock_profile.py  test.go
cmd/investbot/: main.go
cmd/mcp_server/: main.go  middleware.go
cmd/ollama/: main.go
cmd/temp/: main.go
docs/: api.md  api_request_examples.md  config.md  personalized_responses.md  portfolio_tech_design.md  project_structure.md  topic_extractor_llm.md  topic_tag_extractor.md
marketDataScraper/: etf_overview.go  etfs.go  financial_statements.go  forecasts.go  industries.go  industry_stocks.go  interface.go  sector_stocks.go  sectors.go  stock_profile.go
mcp_client/: client.py
openAI/: client.go  errors.go  llm.go
openAiClient/: client.go  client_test.go  errors.go  http_client.go
pkg/config/: config.go
pkg/domain/: etf.go  historical_prices.go  portfolio.go  stock.go  user.go  user_context.go
pkg/errors/: faq.go  http.go  portfolio.go  session.go  topic.go  user.go  user_context.go
pkg/gemini/: llm.go
pkg/handlers/: chat_handler.go  etf_handler.go  faq_handler.go  follow_up_questions_handler.go  portfolio_handler.go  session_handler.go  topic_handler.go  user_context_handler.go  user_handler.go
pkg/llama/: client.go  llm.go
pkg/openAI/: client.go  (+3 more)
python_code/: cash_flow.py  stock_forecasts.py
ui/: README.md  client.py  client_v2.py
(+83 files in other folders)
