[tool.poetry]
name = "investorchatbot"
version = "0.1.0"
description = "An investor assistant chatbot"
authors = ["OrestisStefanou <orestaras1997@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
